blur on hover effect

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             >Work
             <span><ion-icon name="chevron-forward-outline"></ion-icon></span>
           </a>
-          <div class="blurred-bg"></div>
         </div>
       </nav>
     </header>
@@ -87,7 +86,7 @@
       </ul>
     </section>
 
-    <div class="gray-line"></div>
+    <div class="gray-line line-two"></div>
 
     <section class="contact">
       <a href="mailto:" class="tilt">
