--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <div class="hero-text-wrapper">
       <h1 class="hero-text">
-        <span>The </span><span>agency </span><span>for </span><span>what </span
-        ><span>comes </span><span>next.</span>
+        <span>The </span><span>agency </span><span>for </span><br />
+        <span>what </span><span>comes </span><span>next.</span>
       </h1>
     </div>
 
