--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
 
     <section class="image-carousel">
       <img src="./images/wafflestop.jpg" alt="" />
+      <img src="./images/badtesting.jpg" alt="" />
+      <img src="./images/cherokeenation.jpg" alt="" />
+      <img src="./images/A.jpg" alt="" />
+      <img src="./images/flipboard.jpg" alt="" />
+      <img src="./images/hibbett.jpg" alt="" />
+      <img src="./images/icebox.jpg" alt="" />
+      <img src="./images/reese.jpg" alt="" />
+      <img src="./images/ripco.jpg" alt="" />
+      <img src="./images/snickers.jpg" alt="" />
     </section>
 
     <article class="article">
@@ -124,25 +133,6 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
-    <!-- GSAP -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
-      integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/CSSRulePlugin.min.js"
-      integrity="sha512-Aa3UvVB5yhH/dNXMt8nGZDD15Xmntq1ODcavfgT8omSLaomrJKYybWczzc6UJYDUAdqR1hmDJ47V4Ux50PPIuw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
-      integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     ></script>
     <script src="app.js"></script>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
