--- a/index.html
+++ b/index.html
@@ -82,7 +82,29 @@
         <li>Hilton Worldwide</li>
         <li>Jack Daniel’s</li>
       </ul>
-      <ul>
+      <ul class="list-two">
+        <li>Nescafé</li>
+        <li>New York Pride</li>
+        <li>Patreon</li>
+        <li>Rivers Casino</li>
+        <li>Snickers</li>
+        <li>Southern Comfort</li>
+        <li>University of Alabama</li>
+        <li>Twix</li>
+        <li>Wind Creek Hospitality</li>
+      </ul>
+
+      <ul class="mobile-list">
+        <li>Cherokee Casinos</li>
+        <li>Flipboard</li>
+        <li>Foxwoods</li>
+        <li>Glanbia Nutritionals</li>
+        <li>Google</li>
+        <li>Hard Rock</li>
+        <li>Hibbett Sports</li>
+        <li>Hilton Worldwide</li>
+        <li>Jack Daniel’s</li>
+
         <li>Nescafé</li>
         <li>New York Pride</li>
         <li>Patreon</li>
